--- a/app/src/main/res/layout/activity_school_profile.xml
+++ b/app/src/main/res/layout/activity_school_profile.xml
@@ -28,7 +28,8 @@
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:layout_gravity="center_horizontal"
-                android:scaleType="centerInside" />
+                android:scaleType="centerInside"
+                android:src="@drawable/home_top_copy"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
