--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,5 +15,5 @@
         android:id="@+id/imageView2"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher2"/>
+        android:src="@mipmap/splash"/>
 </RelativeLayout>
