--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -33,6 +33,7 @@
         <TextView
             android:id="@+id/textGrid"
             android:text="Lotus Valley"
+            android:fontFamily="@font/nautilus"
             android:textSize="34sp"
             android:textColor="@android:color/white"
             android:layout_centerInParent="true"
